# sdkwork-mcp

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
.github/workflows/: package.yml
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apis/app-api/mcp/: mcp-app-api.openapi.json
apis/backend-api/mcp/: mcp-backend-api.openapi.json
apps/: README.md
apps/sdkwork-mcp-flutter-mobile/: .env.example  .flutter-plugins-dependencies  AGENTS.md  pubspec.yaml  pubspec_overrides.yaml  sdkwork.app.config.json
apps/sdkwork-mcp-flutter-mobile/.dart_tool/: package_config.json  package_graph.json
apps/sdkwork-mcp-flutter-mobile/.sdkwork/: README.md
apps/sdkwork-mcp-flutter-mobile/etc/: sdkwork.deployment.config.json
apps/sdkwork-mcp-flutter-mobile/lib/: app.dart  app_auth_gate.dart  auth_gate.dart  main.dart
apps/sdkwork-mcp-flutter-mobile/specs/: component.spec.json  dependency.composition.json
apps/sdkwork-mcp-flutter-mobile/test/: widget_test.dart
apps/sdkwork-mcp-h5/: .env.example  AGENTS.md  index.html  package.json  sdkwork.app.config.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/sdkwork-mcp-h5/etc/: sdkwork.deployment.config.json
apps/sdkwork-mcp-h5/specs/: component.spec.json  dependency.composition.json
apps/sdkwork-mcp-h5/src/: App.tsx  index.css  main.tsx
apps/sdkwork-mcp-h5/tests/: routes.test.mjs
apps/sdkwork-mcp-pc/: AGENTS.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-mcp-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-mcp-pc/etc/: sdkwork.deployment.config.json
apps/sdkwork-mcp-pc/specs/: component.spec.json  dependency.composition.json
apps/sdkwork-mcp-pc/src/: AdminPermissionGate.tsx  App.tsx  AuthGate.tsx  authGateLogic.ts  index.css  main.tsx
apps/sdkwork-mcp-pc/tests/: routes.test.mjs
configs/: README.md  sdkwork-api-cloud-gateway.mcp.development.toml  sdkwork-api-cloud-gateway.mcp.production.toml
configs/topology/: README.md  cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  standalone.development.env  standalone.production.env  standalone.split-services.development.env  standalone.unified-process.development.env  standalone.unified-process.production.env
crates/: README.md
crates/sdkwork-api-mcp-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-mcp-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-mcp-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-mcp-standalone-gateway/: Cargo.toml
crates/sdkwork-api-mcp-standalone-gateway/src/: lib.rs
crates/sdkwork-intelligence-mcp-repository-sqlx/: Cargo.toml
crates/sdkwork-intelligence-mcp-repository-sqlx/src/: entity_ids.rs  json_util.rs  lib.rs  postgres.rs
crates/sdkwork-intelligence-mcp-service/: Cargo.toml
crates/sdkwork-intelligence-mcp-service/src/: lib.rs  validation.rs  validation_tests.rs
crates/sdkwork-intelligence-mcp-service/src/integration/: drive.rs
crates/sdkwork-mcp-contract/: Cargo.toml
crates/sdkwork-mcp-contract/src/: enums.rs  lib.rs  operations.rs  records.rs
crates/sdkwork-mcp-contract/tests/: contract_enums.rs
crates/sdkwork-mcp-database-host/: Cargo.toml
crates/sdkwork-mcp-database-host/src/: lib.rs
crates/sdkwork-mcp-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-mcp-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-mcp-standalone-gateway/: Cargo.toml
crates/sdkwork-mcp-standalone-gateway/src/: runtime.rs
crates/sdkwork-routes-mcp-app-api/: Cargo.toml
crates/sdkwork-routes-mcp-app-api/specs/: component.spec.json
crates/sdkwork-routes-mcp-app-api/src/: handlers.rs  health.rs  http_route_manifest.rs  lib.rs  paths.rs  ports.rs  web_bootstrap.rs
crates/sdkwork-routes-mcp-backend-api/: Cargo.toml
crates/sdkwork-routes-mcp-backend-api/specs/: component.spec.json
crates/sdkwork-routes-mcp-backend-api/src/: handlers.rs  health.rs  http_route_manifest.rs  lib.rs  paths.rs  ports.rs  web_bootstrap.rs
crates/sdkwork-routes-mcp-shared/: Cargo.toml
crates/sdkwork-routes-mcp-shared/src/: handlers.rs  health.rs  http.rs  lib.rs  list_query.rs  record_builders.rs  response.rs  service_ops.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/ddl/baseline/sqlite/: README.md
database/migrations/postgres/: README.md
database/seeds/common/: 001_bootstrap.sql
deployments/: README.md
deployments/docker/: Dockerfile  README.md
docs/: INDEX.yaml  README.md
docs/architecture/: README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/engineering/plans/: README.md
docs/guides/: README.md
docs/guides/developer/: README.md
docs/guides/integrator/: README.md
docs/guides/operator/: README.md
docs/migrations/: README.md
docs/product/: README.md
docs/product/prd/: PRD.md
docs/runbooks/: README.md
etc/: sdkwork-api-cloud-gateway.mcp.development.toml  sdkwork-api-cloud-gateway.mcp.production.toml
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md  bootstrap-mcp-workspace.mjs
sdks/: README.md
sdks/sdkwork-mcp-app-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-mcp-backend-sdk/: .sdkwork-assembly.json  sdk-manifest.json
specs/: README.md  component.spec.json  iam.module.manifest.json  mcp-admin.permissions.json  mcp-database.schema.yaml  topology.spec.json
tests/: README.md
tests/contract/: README.md
tests/static/: README.md  mcp-api-alignment.test.mjs  mcp-api-envelope.test.mjs  mcp-app-package-naming.test.mjs  mcp-contract-boundary.test.mjs  mcp-database-schema.test.mjs  mcp-flutter-alignment.test.mjs  mcp-pc-admin.test.mjs
tools/: README.md  check_sdkwork_mcp_architecture_alignment.mjs  mcp_openapi_materialize.mjs  mcp_sdk_generate.mjs  mcp_sdk_generator_runner.mjs
(+43 files in other folders)
