[workspace]
members = [
    "crates/sdkwork-mcp-gateway-assembly",
    "crates/sdkwork-mcp-contract",
    "crates/sdkwork-intelligence-mcp-service",
    "crates/sdkwork-intelligence-mcp-repository-sqlx",
    "crates/sdkwork-routes-mcp-shared",
    "crates/sdkwork-routes-mcp-app-api",
    "crates/sdkwork-routes-mcp-backend-api",
    "crates/sdkwork-mcp-standalone-gateway",
    "crates/sdkwork-mcp-database-host",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }

sdkwork-routes-mcp-shared = { path = "crates/sdkwork-routes-mcp-shared" }
sdkwork-mcp-contract = { path = "crates/sdkwork-mcp-contract" }
sdkwork-intelligence-mcp-service = { path = "crates/sdkwork-intelligence-mcp-service" }
sdkwork-intelligence-mcp-repository-sqlx = { path = "crates/sdkwork-intelligence-mcp-repository-sqlx" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-drive-contract = { path = "../sdkwork-drive/crates/sdkwork-drive-contract" }
sdkwork-id-core = { path = "../sdkwork-id/crates/sdkwork-id-core" }
