[package]
name = "sdkwork-api-mcp-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-mcp application HTTP plane."

[lib]
name = "sdkwork_api_mcp_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
sdkwork-intelligence-mcp-repository-sqlx = { path = "../sdkwork-intelligence-mcp-repository-sqlx" }
sdkwork-intelligence-mcp-service = { path = "../sdkwork-intelligence-mcp-service" }
sdkwork-mcp-database-host = { path = "../sdkwork-mcp-database-host" }
sdkwork-web-bootstrap = { workspace = true }
sdkwork_routes_mcp_shared = { package = "sdkwork-routes-mcp-shared", path = "../sdkwork-routes-mcp-shared" }
sdkwork-routes-mcp-app-api = { path = "../sdkwork-routes-mcp-app-api" }
sdkwork-routes-mcp-backend-api = { path = "../sdkwork-routes-mcp-backend-api" }
