[package]
name = "sdkwork-api-mcp-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "sdkwork-api-mcp-standalone-gateway"
path = "src/bin/app_main.rs"

[dependencies]
sdkwork_api_mcp_assembly = { package = "sdkwork-api-mcp-assembly", path = "../sdkwork-api-mcp-assembly" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

