[package]
name = "sdkwork-mcp-database-host"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork MCP database lifecycle bootstrap."

[lib]
name = "sdkwork_mcp_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork-database-config = { workspace = true }
sdkwork-database-lifecycle = { workspace = true }
sdkwork-database-spi = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
sqlx.workspace = true
