[package]
name = "sdkwork-routes-mcp-app-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-intelligence-mcp-service = { path = "../sdkwork-intelligence-mcp-service" }
sdkwork-routes-mcp-shared = { path = "../sdkwork-routes-mcp-shared" }
sdkwork-mcp-contract.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-bootstrap = { workspace = true }
sdkwork-web-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
