[package]
name = "sdkwork-routes-mcp-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
sdkwork-intelligence-mcp-service = { path = "../sdkwork-intelligence-mcp-service" }
sdkwork-mcp-contract.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-bootstrap = { workspace = true }
sdkwork-web-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
